<resources>
    <string name="app_name">granEstadia</string>
    <string name="facebook_app_id">287251448798707</string>
    <string name="fb_login_protocol_scheme">fb287251448798707</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seccion_1">Mapa</string>
    <string name="seccion_2">Favoritos</string>
    <string name="seccion_3">Notificaciones</string>
    <string name="otras_opciones">Ajustes de Usuario</string>
    <string name="opcion_1">Mi Perfil</string>
    <string name="opcion_2">Cerrar Sesion</string>
    <string name="title_activity_maps">Map</string>
    <string name="punto_de_referencia">Punto de Referencia</string>
    <string name="agregar_fotos_4_requeridas">Agregar Fotos (4 requeridas)</string>
    <string name="barrio">Barrio</string>
    <string name="otros_servicios">Otros Servicios</string>
    <string name="ciudad">Ciudad</string>
    <string name="departamento">Departamento</string>
    <string name="precio">Precio</string>
    <string name="todo">todo</string>
    <string name="c">C$</string>
    <string name="cable_c">Cable C$</string>
    <string name="comida_c">Comida C$</string>
    <string name="precioComida">0.00</string>
    <string name="piscina_c">Piscina C$</string>
    <string name="precioInternet">0.00</string>
    <string name="internet_c">Internet C$</string>
    <string name="precioCable">0.00</string>
    <string name="precioPiscina">0.00</string>
    <string name="descripcionTxt">Descripcion del cuarto y localidad en donde se ubica</string>
    <string name="condicionesTxt">Condiciones que el inquilino debera de suir en la casa</string>
    <string name="ofertaBtn">Arrendar</string>
</resources>
