<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/edt_precio"
        android:layout_width="100dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/fotos"
        app:layout_constraintTop_toBottomOf="@+id/edt_direccion"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/fotos"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="08dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="9dp"
        android:text="@string/agregar_fotos_4_requeridas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_direccion"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imagen1"
        android:layout_width="89dp"
        android:layout_height="67dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/imagen2"
        app:layout_constraintTop_toBottomOf="@+id/fotos"
        app:srcCompat="@color/colorAccent" />

    <ImageView
        android:id="@+id/imagen2"
        android:layout_width="89dp"
        android:layout_height="67dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotos"
        app:srcCompat="@color/colorAccent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imagen3"
        android:layout_width="89dp"
        android:layout_height="67dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imagen4"
        app:layout_constraintTop_toBottomOf="@+id/imagen1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorAccent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imagen4"
        android:layout_width="89dp"
        android:layout_height="67dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorAccent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edt_descripcion"
        android:layout_width="157dp"
        android:layout_height="135dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:hint="@string/descripcionTxt"
        android:inputType="textMultiLine"
        android:lines="@android:integer/config_mediumAnimTime"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imagen3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_precio"
        app:layout_constraintVertical_bias="0.232" />

    <EditText
        android:id="@+id/edt_condiciones"
        android:layout_width="269dp"
        android:layout_height="132dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/condicionesTxt"
        android:inputType="textMultiLine"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen4" />

    <Button
        android:id="@+id/btn_oferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/ofertaBtn"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_condiciones"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edt_direccion"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Ingrese lel departamento, ciudad, municipio y barrio en el que se encuentra el inmueble"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>